flickering fix experiment

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 /* General */
 
 html {
-    background: #000;
     color: #2e3436;
     font-family: sans-serif;
     font-size: 13px;
